classDiagram
    class LogEntry {
        -String message
        -LogLevel level
        -DateTime timestamp
    }
    class LogWriter {
        <<interface>>
        +write()
    }
    class FileWriter {
        +write()
    }
    class LoggingService {
        -List~LogWriter~ writers
        +log()
    }
    LoggingService --> LogWriter
    LoggingService --> LogEntry
    LogWriter <|.. FileWriter
